--- a/FerreteConstruccion.html
+++ b/FerreteConstruccion.html
@@ -19,16 +19,17 @@
         <!--Final de Lógica-Programación -->
 		
 
-		</head>
-	<body>
+	</head>
+
+	<body ng-app="FerreteConstruccion" ng-controller="controlConstruccion">>
 		<div class="CajaUno animated bounceInDown">
 			
 		
 			<form id="FormIngreso">
 
-				<input type="text"  placeholder="Largo del terreno" id="Largo">
-				<input type="text"  placeholder="Ancho del terreno" id="Ancho">
-				<input type="text"  placeholder="Radio del terreno" id="Radio">
+				<input type="text"  placeholder="Largo del terreno" ng-model="vLargo" id="Largo">
+				<input type="text"  placeholder="Ancho del terreno" ng-model="vAncho" id="Ancho">
+				<input type="text"  placeholder="Radio del terreno" ng-model="vRadio" id="Radio">
 				<br>
 				
 			</form>
@@ -37,9 +38,9 @@
 		<div class="CajaUno animated bounceInLeft">
 			
 			
-			<button  class="MiBotonUTN" onclick="Rectangulo()" >A- Rectangulo de alambre</button>
-			<button  class="MiBotonUTN" onclick="Circulo()" >B- Circulo de alambre</button>
-			<button  class="MiBotonUTN" onclick="Materiales()" >C- Materiales contrapiso</button>
+			<button  class="MiBotonUTN" ng-click="Rectangulo(vLargo,vAncho)" >A- Rectangulo de alambre</button>
+			<button  class="MiBotonUTN" ng-click="Circulo(vRadio)" >B- Circulo de alambre</button>
+			<button  class="MiBotonUTN" ng-click="Contrapiso(vLargo,vAncho)" >C- Materiales contrapiso</button>
 
 		</div>
 
