--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<a  class="MiBotonUTNMenu" title="Ferrete Pinturas" onclick="location.href='FerretePinturas.html'" >Ejercicio 3</a>
 				<a  class="MiBotonUTNMenu" title="Ferrete Iluminaci&oacute;n" onclick="location.href='FerreteIluminacion.html'" >Ejercicio 4</a>
 				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v1.0" onclick="location.href='juego.html'" >Juego</a>
-				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v2.0" onclick="location.href='AdivinaElNumero2.html'" >Ejercicio 6</a>
+				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v2.0" onclick="location.href='Edad.html'" >Edad</a>
 				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v1.0"  onclick="location.href='PiedarPapelTijera1.html'" >Ejercicio 7</a>
 				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v2.0" onclick="location.href='PiedarPapelTijera2.html'" >Ejercicio 8</a>
 				<a  class="MiBotonUTNMenu" title="Agilidad aritm&eacute;tica v1.0"onclick="location.href='AgilidadAritmetica1.html'" >Ejercicio 9</a>
