--- a/PiedraPapel.html
+++ b/PiedraPapel.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Programación AngularJS</title>
+		<title>Curso Ingreso UTN FRA</title>
 
 		<!--Estilos-->
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 		<link rel="stylesheet" type="text/css" href="animacion.css">
 		<!--final de Estilos-->
-
-
 
 		<script src="https://www.gstatic.com/firebasejs/3.5.1/firebase.js"></script>
 		<script>
@@ -24,50 +22,62 @@
 		  firebase.initializeApp(config);
 		</script>
 
-
 		<!--AngularJS-->
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 		<!--AngularJS-->
-		
 
 
 		<!--Lógica-Programación-->
-		<script type="text/javascript" src="jsJuego.js"></script>
+		<script type="text/javascript" src="PiedraPapel.js"></script>
         <!--Final de Lógica-Programación -->
-		
+	</head>
 
-		</head>
-	<body ng-app="Juego" ng-controller="controlJuego">
+	<body ng-app="PiedraPapel" ng-controller="ctrlPiedraPapel">
+		
 		<div class="CajaUno animated bounceInDown">
 			
 		
 			<form id="FormIngreso">
-
-				<input type="text"  placeholder="Ingrese número" ng-model="datos.numero"id="numero">
-				<input type="text"  placeholder="Ingrese Nombre" ng-model="datos.nombre"id="nombre">				
-				<br>
+				<center>
+					<img src="imagenes/interrogacion.jpg" >
+					<input type="text"  placeholder="Ingrese Nombre" ng-model="datos.nombre"id="nombre">					
+				</center>
 				
 			</form>
 			
 		</div>
 		<div class="CajaUno animated bounceInLeft">
 			
-			<button  class="MiBotonUTN" ng-click="jugar()" >Jugar</button>
+
+			
+			
+			<img class="PiedraPapelTijera animated zoomInRight " src="imagenes/piedra.jpg" ng-click="piedra()">
+			<img class="PiedraPapelTijera animated zoomInUp" src="imagenes/papel.jpg" ng-click="papel()">
+			<img class="PiedraPapelTijera animated zoomInLeft"  src="imagenes/tijera.jpg" ng-click="tijera()">
+			
+			
+
+			
+
 
 		</div>
 
 		<div class="CajaEnunciado animated bounceInLeft">
 			<h2>Enunciado:</h2>
 			
-	
 				<h3>
-					debe adivinar el numero
+						3.	Piedra, Papel o Tijera (v 1.0):
+						</br>Al comenzar el juego generaremos un número RANDOM del 1 al 3 para la selección de la máquina, siendo 1 para “piedra”, el 2 para “papel” y 3 para “tijera”.
+						</br>El jugador seleccionará una imagen correspondiente a su opción  y le informaremos si ganó, empató o perdió
+
+
 				</h3>
+			
 			
 		</div>
 
 		<div class="CajaAbajo animated bounceInUp">
-			<a  class="MiBotonUTNLinea" onclick="location.href='index.html'" >Men&uacute; ejercicios</a>	
+			<a style=" margin-top: -10%;"  class="MiBotonUTNLinea" onclick="location.href='index.html'" >Men&uacute; ejercicios</a>	
 		</div>
 	</body>
 </html>
