--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 				<a  class="MiBotonUTNMenu" title="Ferrete Construcci&oacute;n" onclick="location.href='FerreteConstruccion.html'" >Ejercicio 2</a>
 				<a  class="MiBotonUTNMenu" title="Ferrete Pinturas" onclick="location.href='FerretePinturas.html'" >Ejercicio 3</a>
 				<a  class="MiBotonUTNMenu" title="Ferrete Iluminaci&oacute;n" onclick="location.href='FerreteIluminacion.html'" >Ejercicio 4</a>
-				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v1.0" onclick="location.href='juego.html'" >Juego</a>
+				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v1.0" onclick="location.href='juego.html'" >Adivina el numero</a>
 				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v2.0" onclick="location.href='Edad.html'" >Edad</a>
-				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v1.0"  onclick="location.href='PiedarPapelTijera1.html'" >Ejercicio 7</a>
-				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v2.0" onclick="location.href='PiedarPapelTijera2.html'" >Ejercicio 8</a>
+				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v1.0"  onclick="location.href='PiedraPapel.html'" >Piedra Papel Tijera</a>
+				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v2.0" onclick="location.href='Agilidad.html'" >Agilidad</a>
 				<a  class="MiBotonUTNMenu" title="Agilidad aritm&eacute;tica v1.0"onclick="location.href='AgilidadAritmetica1.html'" >Ejercicio 9</a>
 				<a  class="MiBotonUTNMenu" title="Agilidad aritm&eacute;tica v2.0"onclick="location.href='AgilidadAritmetica2.html'" >Ejercicio 10</a>
 				<a  class="MiBotonUTNMenu" title="Reflejos dalt&oacute;nicos v1.0"onclick="location.href='ReflejosDaltonicos1.html'" >Ejercicio 11</a>
