Juego: Agilidad mental, guarda en firebase

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		
-		<div class="CajaInicio animated bounceInRight">
+		<div class="CajaInicio animated flash">
 			<h1>Trabajos Pr&aacute;cticos: </br> Curso de ingreso</h1>
 			<form id="FormIngreso" style="min-height: 380px;">
 				<img src="tps.png" style=" width: 546px; float: right;">
