--- a/public/PiedraPapel.html
+++ b/public/PiedraPapel.html
@@ -8,8 +8,8 @@
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 		<link rel="stylesheet" type="text/css" href="animacion.css">
 		<!--final de Estilos-->
+
 		<script src="https://www.gstatic.com/firebasejs/3.5.1/firebase.js"></script>
-		
 		<script>
 		  // Initialize Firebase
 		  var config = {
@@ -22,26 +22,25 @@
 		  firebase.initializeApp(config);
 		</script>
 
-		<script src="angular.min.js"></script>
-		<!--Lógica-Programación-->
-		<script type="text/javascript" src="Agilidad.js"></script>
-        <!--Final de Lógica-Programación -->
-		
+		<!--AngularJS-->
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+		<!--AngularJS-->
 
-		</head>
-	<body ng-app="Agilidad" ng-controller="controlAgilidad">
+
+		<!--Lógica-Programación-->
+		<script type="text/javascript" src="PiedraPapel.js"></script>
+        <!--Final de Lógica-Programación -->
+	</head>
+
+	<body ng-app="PiedraPapel" ng-controller="ctrlPiedraPapel">
+		
 		<div class="CajaUno animated bounceInDown">
 			
 		
-		
-			<form id="FormIngreso"> 
-			<input type="text"  placeholder="Numero 1" ng-model="datos.Numero1" id="Numero1" readonly>
-			<input type="text"  placeholder="Signo" ng-model="datos.Signo" id="Signo" readonly>
-			<input type="text"  placeholder="Numero 2" ng-model="datos.Numero2" id="Numero 2" readonly>
-			<input type="text"  placeholder="Respuesta" ng-model="datos.Respuesta" id="Respuesta">
-			<button  class="MiBotonUTN" ng-click="Aceptar()" >Aceptar...</button>
+			<form id="FormIngreso">
 				<center>
 					<img src="imagenes/interrogacion.jpg" >
+					<input type="text"  placeholder="Ingrese Nombre" ng-model="datos.nombre"id="nombre">					
 				</center>
 				
 			</form>
@@ -49,6 +48,17 @@
 		</div>
 		<div class="CajaUno animated bounceInLeft">
 			
+
+			
+			
+			<img class="PiedraPapelTijera animated zoomInRight " src="imagenes/piedra.jpg" ng-click="piedra()">
+			<img class="PiedraPapelTijera animated zoomInUp" src="imagenes/papel.jpg" ng-click="papel()">
+			<img class="PiedraPapelTijera animated zoomInLeft"  src="imagenes/tijera.jpg" ng-click="tijera()">
+			
+			
+
+			
+
 
 		</div>
 
