Ultima Prueba, ya puedo ejecutar desde URL: https://zonadejuejos.firebaseapp.com

--- a/Agilidad.html
+++ b/Agilidad.html
@@ -39,7 +39,7 @@
 			<input type="text"  placeholder="Signo" ng-model="datos.Signo" id="Signo" readonly>
 			<input type="text"  placeholder="Numero 2" ng-model="datos.Numero2" id="Numero 2" readonly>
 			<input type="text"  placeholder="Respuesta" ng-model="datos.Respuesta" id="Respuesta">
-			<button  class="MiBotonUTN" ng-click="Aceptar()" >->Aceptar...</button>
+			<button  class="MiBotonUTN" ng-click="Aceptar()" >Aceptar...</button>
 				<center>
 					<img src="imagenes/interrogacion.jpg" >
 				</center>
