--- a/public/Agilidad.html
+++ b/public/Agilidad.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Curso Ingreso UTN FRA</title>
+		<title>Juego: pon a prueba tu agilidad!</title>
 
 		<!--Estilos-->
 		<link rel="stylesheet" type="text/css" href="estilo.css">
