--- a/public/juego.html
+++ b/public/juego.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Programación AngularJS</title>
+		<title>Adivina el numero</title>
 
 		<!--Estilos-->
 		<link rel="stylesheet" type="text/css" href="estilo.css">
