Funcionalidad para la entrega final
Funcionalidad para la entrega final

--- a/PiedraPapel.html
+++ b/PiedraPapel.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Curso Ingreso UTN FRA</title>
+		<title>Juego: Te animas un Yan Ken Po?</title>
 
 		<!--Estilos-->
 		<link rel="stylesheet" type="text/css" href="estilo.css">
@@ -30,6 +30,12 @@
 		<!--Lógica-Programación-->
 		<script type="text/javascript" src="PiedraPapel.js"></script>
         <!--Final de Lógica-Programación -->
+
+		<div class="CajaAbajo animated bounceInUp">
+			<a style=" margin-top: 0%;"  class="MiBotonUTNLinea" onclick="location.href='menu.html'" >Men&uacute;</a>	
+		</div>
+
+
 	</head>
 
 	<body ng-app="PiedraPapel" ng-controller="ctrlPiedraPapel">
@@ -62,7 +68,7 @@
 
 		</div>
 
-		<div class="CajaEnunciado animated bounceInLeft">
+		<div style=" margin-top: 20%;" class="CajaEnunciado animated bounceInLeft">
 			<h2>Enunciado:</h2>
 			
 				<h3>
@@ -76,8 +82,6 @@
 			
 		</div>
 
-		<div class="CajaAbajo animated bounceInUp">
-			<a style=" margin-top: -10%;"  class="MiBotonUTNLinea" onclick="location.href='index.html'" >Men&uacute; ejercicios</a>	
-		</div>
+
 	</body>
 </html>
