--- a/Agilidad.html
+++ b/Agilidad.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Curso Ingreso UTN FRA</title>
+		<title>Juego: pon a prueba tu agilidad!</title>
 
 		<!--Estilos-->
 		<link rel="stylesheet" type="text/css" href="estilo.css">
@@ -27,7 +27,11 @@
 		<script type="text/javascript" src="Agilidad.js"></script>
         <!--Final de Lógica-Programación -->
 		
+		<div class="CajaAbajo animated bounceInUp">
+			<a style=" margin-top: 0%;"  class="MiBotonUTNLinea" onclick="location.href='menu.html'" >Men&uacute;</a>	
+		</div>
 
+		
 		</head>
 	<body ng-app="Agilidad" ng-controller="controlAgilidad">
 		<div class="CajaUno animated bounceInDown">
@@ -39,7 +43,7 @@
 			<input type="text"  placeholder="Signo" ng-model="datos.Signo" id="Signo" readonly>
 			<input type="text"  placeholder="Numero 2" ng-model="datos.Numero2" id="Numero 2" readonly>
 			<input type="text"  placeholder="Respuesta" ng-model="datos.Respuesta" id="Respuesta">
-			<button  class="MiBotonUTN" ng-click="Aceptar()" >Aceptar...</button>
+			<button  class="MiBotonUTN" ng-click="Aceptar()" >...Aceptar...</button>
 				<center>
 					<img src="imagenes/interrogacion.jpg" >
 				</center>
@@ -52,7 +56,7 @@
 
 		</div>
 
-		<div class="CajaEnunciado animated bounceInLeft">
+		<div style=" margin-top: 20%;" class="CajaEnunciado animated bounceInLeft">
 			<h2>Enunciado:</h2>
 			
 				<h3>
@@ -66,8 +70,6 @@
 			
 		</div>
 
-		<div class="CajaAbajo animated bounceInUp">
-			<a style=" margin-top: -10%;"  class="MiBotonUTNLinea" onclick="location.href='index.html'" >Men&uacute; ejercicios</a>	
-		</div>
+
 	</body>
 </html>
