--- a/juego.html
+++ b/juego.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Programación AngularJS</title>
+		<title>Adivina el numero</title>
 
 		<!--Estilos-->
 		<link rel="stylesheet" type="text/css" href="estilo.css">
@@ -36,6 +36,10 @@
         <!--Final de Lógica-Programación -->
 		
 
+		<div class="CajaAbajo animated bounceInUp">
+			<a  style=" margin-top: 0%;" class="MiBotonUTNLinea" onclick="location.href='menu.html'" >Men&uacute;</a>	
+		</div>		
+
 		</head>
 	<body ng-app="Juego" ng-controller="controlJuego">
 		<div class="CajaUno animated bounceInDown">
@@ -56,7 +60,7 @@
 
 		</div>
 
-		<div class="CajaEnunciado animated bounceInLeft">
+		<div style=" margin-top: 20%;" class="CajaEnunciado animated bounceInLeft">
 			<h2>Enunciado:</h2>
 			
 	
@@ -66,8 +70,6 @@
 			
 		</div>
 
-		<div class="CajaAbajo animated bounceInUp">
-			<a  class="MiBotonUTNLinea" onclick="location.href='index.html'" >Men&uacute; ejercicios</a>	
-		</div>
+
 	</body>
 </html>
