--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,11 @@
         <!--Final de Lógica-Programación -->
 		
 
+		<div class="CajaAbajo animated bounceInUp">
+			<a style=" margin-top: 0%;"  class="MiBotonUTNLinea" onclick="location.href='index.html'" >Perfil...</a>	
+		</div>
+
+
 	</head>
 	<body>
 		
@@ -21,10 +26,10 @@
 			<h1>Trabajos Pr&aacute;cticos: </br> Plataforma digital II</h1>
 			<form id="FormIngreso" style="min-height: 380px;">
 				<img src="tps.png" style=" width: 546px; float: right;">
-				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v1.0" onclick="location.href='menu.html'" >Men&uacute;</a>
+				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v1.0" onclick="location.href='juego.html'" >Adivina el numero</a>
+				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v1.0"  onclick="location.href='PiedraPapel.html'" >Piedra Papel Tijera</a>
+				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v2.0" onclick="location.href='Agilidad.html'" >Agilidad</a>
 			</form>
-			
-
 		</div>
 
 		<center>
