--- a/public/Agilidad.html
+++ b/public/Agilidad.html
@@ -27,7 +27,11 @@
 		<script type="text/javascript" src="Agilidad.js"></script>
         <!--Final de Lógica-Programación -->
 		
+		<div class="CajaAbajo animated bounceInUp">
+			<a style=" margin-top: 0%;"  class="MiBotonUTNLinea" onclick="location.href='menu.html'" >Men&uacute;</a>	
+		</div>
 
+		
 		</head>
 	<body ng-app="Agilidad" ng-controller="controlAgilidad">
 		<div class="CajaUno animated bounceInDown">
@@ -52,7 +56,7 @@
 
 		</div>
 
-		<div class="CajaEnunciado animated bounceInLeft">
+		<div style=" margin-top: 20%;" class="CajaEnunciado animated bounceInLeft">
 			<h2>Enunciado:</h2>
 			
 				<h3>
@@ -66,8 +70,6 @@
 			
 		</div>
 
-		<div class="CajaAbajo animated bounceInUp">
-			<a style=" margin-top: -10%;"  class="MiBotonUTNLinea" onclick="location.href='index.html'" >Men&uacute; ejercicios</a>	
-		</div>
+
 	</body>
 </html>
