--- a/public/index.html
+++ b/public/index.html
@@ -18,25 +18,10 @@
 	<body>
 		
 		<div class="CajaInicio animated flash">
-			<h1>Trabajos Pr&aacute;cticos: </br> Curso de ingreso</h1>
+			<h1>Trabajos Pr&aacute;cticos: </br> Plataforma digital II</h1>
 			<form id="FormIngreso" style="min-height: 380px;">
 				<img src="tps.png" style=" width: 546px; float: right;">
-					
-				<a  class="MiBotonUTNMenu" title="Ferrete Facturaci&oacute;n" onclick="location.href='FerreteFacturacion.html'" >Ejercicio 1</a>
-				<a  class="MiBotonUTNMenu" title="Ferrete Construcci&oacute;n" onclick="location.href='FerreteConstruccion.html'" >Ejercicio 2</a>
-				<a  class="MiBotonUTNMenu" title="Ferrete Pinturas" onclick="location.href='FerretePinturas.html'" >Ejercicio 3</a>
-				<a  class="MiBotonUTNMenu" title="Ferrete Iluminaci&oacute;n" onclick="location.href='FerreteIluminacion.html'" >Ejercicio 4</a>
-				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v1.0" onclick="location.href='juego.html'" >Adivina el numero</a>
-				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v2.0" onclick="location.href='Edad.html'" >Edad</a>
-				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v1.0"  onclick="location.href='PiedraPapel.html'" >Piedra Papel Tijera</a>
-				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v2.0" onclick="location.href='Agilidad.html'" >Agilidad</a>
-				<a  class="MiBotonUTNMenu" title="Agilidad aritm&eacute;tica v1.0"onclick="location.href='AgilidadAritmetica1.html'" >Ejercicio 9</a>
-				<a  class="MiBotonUTNMenu" title="Agilidad aritm&eacute;tica v2.0"onclick="location.href='AgilidadAritmetica2.html'" >Ejercicio 10</a>
-				<a  class="MiBotonUTNMenu" title="Reflejos dalt&oacute;nicos v1.0"onclick="location.href='ReflejosDaltonicos1.html'" >Ejercicio 11</a>
-				<a  class="MiBotonUTNMenu" title="estad&iacute;sticas y censos "onclick="location.href='RisingBTL.html'" >Ejercicio 12</a>
-				<a  class="MiBotonUTNMenu" title="instituto matem&aacute;tico  FonteCristo  "onclick="location.href='FonteCristo.html'" >Ejercicio 13</a>
-				
-
+				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v1.0" onclick="location.href='menu.html'" >Men&uacute;</a>
 			</form>
 			
 
