Funcionalidad vuelve automatiacmente al menu, salvo en Adivina el numero
Funcionalidad vuelve automatiacmente al menu, salvo en Adivina el numero

--- a/Agilidad.html
+++ b/Agilidad.html
@@ -43,7 +43,7 @@
 			<input type="text"  placeholder="Signo" ng-model="datos.Signo" id="Signo" readonly>
 			<input type="text"  placeholder="Numero 2" ng-model="datos.Numero2" id="Numero 2" readonly>
 			<input type="text"  placeholder="Respuesta" ng-model="datos.Respuesta" id="Respuesta">
-			<button  class="MiBotonUTN" ng-click="Aceptar()" >...Aceptar...</button>
+			<button  class="MiBotonUTN" ng-click="Aceptar()" >Aceptar</button>
 				<center>
 					<img src="imagenes/interrogacion.jpg" >
 				</center>
@@ -57,14 +57,10 @@
 		</div>
 
 		<div style=" margin-top: 20%;" class="CajaEnunciado animated bounceInLeft">
-			<h2>Enunciado:</h2>
+			<h2>Como jugas:</h2>
 			
 				<h3>
-						3.	Piedra, Papel o Tijera (v 1.0):
-						</br>Al comenzar el juego generaremos un número RANDOM del 1 al 3 para la selección de la máquina, siendo 1 para “piedra”, el 2 para “papel” y 3 para “tijera”.
-						</br>El jugador seleccionará una imagen correspondiente a su opción  y le informaremos si ganó, empató o perdió
-
-
+						Intenata sumar, restar o multiplicar lo mas rapido que puedas!
 				</h3>
 			
 			
