--- a/juego.html
+++ b/juego.html
@@ -61,11 +61,11 @@
 		</div>
 
 		<div style=" margin-top: 20%;" class="CajaEnunciado animated bounceInLeft">
-			<h2>Enunciado:</h2>
+			<h2>Como jugas:</h2>
 			
 	
 				<h3>
-					debe adivinar el numero
+				    Hay un numero secreto escondido, ingresando tus numeros, tenes que adivinarlo
 				</h3>
 			
 		</div>
