--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
 	
         <!--Final de Lógica-Programación -->
 		
+		<div class="CajaAbajo animated bounceInUp">
+
+				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v1.0" onclick="location.href='menu.html'" >Men&uacute;</a>	
+		</div>
 
 	</head>
 	<body>
 		
 		<div class="CajaInicio animated flash">
-			<h1>Trabajos Pr&aacute;cticos: </br> Plataforma digital II</h1>
-			<form id="FormIngreso" style="min-height: 380px;">
-				<img src="tps.png" style=" width: 546px; float: right;">
-				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v1.0" onclick="location.href='menu.html'" >Men&uacute;</a>
+			<h1>
+				Perfil: Gorrassi Nicolas
+			</h1>
+			<form id="FormIngreso" style="min-height: 370px;">
+				<img src="Nico4x4.png" width="140" height="140">
+				<h1>Carrera: Comunicacion Interactiva & nuevos medios</h1>
+				<h1>Materia: Plataformas Difgitales II</h1>
+				<h1>Prof: Ingeniero Octavio Villegas</h1>
 			</form>
-			
-
 		</div>
 
 		<center>
