--- a/menu.html
+++ b/menu.html
@@ -22,10 +22,11 @@
 	</head>
 	<body>
 		
-		<div class="CajaInicio animated flash">
-			<h1>Trabajos Pr&aacute;cticos: </br> Plataforma digital II</h1>
-			<form id="FormIngreso" style="min-height: 380px;">
-				<img src="tps.png" style=" width: 546px; float: right;">
+		<div class="CajaInicio animated flash"  >
+		<img  src="juegos.png" style=" width: 246px; float: right;">	
+			<h1>Trabajo Pr&aacute;ctico: </br> Plataforma digital II</h1>
+			<form id="FormIngreso" style="min-height: 280px;">
+				
 				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v1.0" onclick="location.href='juego.html'" >Adivina el numero</a>
 				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v1.0"  onclick="location.href='PiedraPapel.html'" >Piedra Papel Tijera</a>
 				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v2.0" onclick="location.href='Agilidad.html'" >Agilidad</a>
