Este "Public" Vale
Este "Public" Vale

--- a/public/PiedraPapel.html
+++ b/public/PiedraPapel.html
@@ -23,7 +23,7 @@
 		</script>
 
 		<!--AngularJS-->
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+		<script src="angular.min.js"></script>
 		<!--AngularJS-->
 
 
@@ -54,27 +54,19 @@
 		</div>
 		<div class="CajaUno animated bounceInLeft">
 			
-
-			
-			
 			<img class="PiedraPapelTijera animated zoomInRight " src="imagenes/piedra.jpg" ng-click="piedra()">
 			<img class="PiedraPapelTijera animated zoomInUp" src="imagenes/papel.jpg" ng-click="papel()">
 			<img class="PiedraPapelTijera animated zoomInLeft"  src="imagenes/tijera.jpg" ng-click="tijera()">
-			
-			
-
-			
-
 
 		</div>
 
 		<div style=" margin-top: 20%;" class="CajaEnunciado animated bounceInLeft">
-			<h2>Enunciado:</h2>
+			<h2>Como jugas:</h2>
 			
 				<h3>
-						3.	Piedra, Papel o Tijera (v 1.0):
-						</br>Al comenzar el juego generaremos un número RANDOM del 1 al 3 para la selección de la máquina, siendo 1 para “piedra”, el 2 para “papel” y 3 para “tijera”.
-						</br>El jugador seleccionará una imagen correspondiente a su opción  y le informaremos si ganó, empató o perdió
+						Despues de ingresar tu nombre,
+						</br>eligiendo las imagenes de abajo, jugas Piedra, Papel, Tijera contra la compu
+						</br>Suerte!!
 
 
 				</h3>
