--- a/public/Agilidad.html
+++ b/public/Agilidad.html
@@ -28,7 +28,7 @@
         <!--Final de Lógica-Programación -->
 		
 		<div class="CajaAbajo animated bounceInUp">
-			<a style=" margin-top: 0%;"  class="MiBotonUTNLinea" onclick="location.href='menu.html'" >Men&uacute;</a>	
+			<a style=" margin-top: 0%;"  class="MiBotonUTNMenuInicioParcial" onclick="location.href='menu.html'" >Men&uacute;</a>	
 		</div>
 
 		
@@ -45,7 +45,7 @@
 			<input type="text"  placeholder="Respuesta" ng-model="datos.Respuesta" id="Respuesta">
 			<button  class="MiBotonUTN" ng-click="Aceptar()" >Aceptar</button>
 				<center>
-					<img src="imagenes/interrogacion.jpg" >
+					<img src="imagenes/agilidad.jpg" >
 				</center>
 				
 			</form>
@@ -57,7 +57,7 @@
 		</div>
 
 		<div style=" margin-top: 20%;" class="CajaEnunciado animated bounceInLeft">
-			<h2>Como jugas:</h2>
+			<h2>Agilidad, como jugas:</h2>
 			
 				<h3>
 						Intenata sumar, restar o multiplicar lo mas rapido que puedas!
