--- a/public/Edad.html
+++ b/public/Edad.html
@@ -41,11 +41,11 @@
 		</div>
 
 		<div class="CajaEnunciado animated bounceInLeft">
-			<h2>Enunciado:</h2>
+			<h2>Adivinar, como jugas:</h2>
 			
 	
 				<h3>
-					debe adivinar el numero
+					Usando tu mejor tecnica, tenes que adivinar el numero secreto
 				</h3>
 			
 		</div>
