--- a/public/juego.html
+++ b/public/juego.html
@@ -37,7 +37,7 @@
 		
 
 		<div class="CajaAbajo animated bounceInUp">
-			<a  style=" margin-top: 0%;" class="MiBotonUTNLinea" onclick="location.href='menu.html'" >Men&uacute;</a>	
+			<a  style=" margin-top: 0%;" class="MiBotonUTNMenuInicioParcial" onclick="location.href='menu.html'" >Men&uacute;</a>	
 		</div>		
 
 		</head>
@@ -50,7 +50,7 @@
 				<input type="text"  placeholder="Ingrese número" ng-model="datos.numero"id="numero">
 				<input type="text"  placeholder="Ingrese Nombre" ng-model="datos.nombre"id="nombre">				
 				<br>
-				
+				<img src="imagenes/Adivina_num.jpg" >
 			</form>
 			
 		</div>
@@ -61,11 +61,11 @@
 		</div>
 
 		<div style=" margin-top: 20%;" class="CajaEnunciado animated bounceInLeft">
-			<h2>Como jugas:</h2>
+			<h2>Adivina el numero, como jugas:</h2>
 			
 	
 				<h3>
-				    Hay un numero secreto escondido, ingresando tus numeros, tenes que adivinarlo
+				    Hay un numero secreto escondido, ingresando un numeros por vez, tenes que adivinarlo.
 				</h3>
 			
 		</div>
