--- a/public/PiedraPapel.html
+++ b/public/PiedraPapel.html
@@ -32,7 +32,7 @@
         <!--Final de Lógica-Programación -->
 
 		<div class="CajaAbajo animated bounceInUp">
-			<a style=" margin-top: 0%;"  class="MiBotonUTNLinea" onclick="location.href='menu.html'" >Men&uacute;</a>	
+			<a style=" margin-top: 0%;"  class="MiBotonUTNMenuInicioParcial" onclick="location.href='menu.html'" >Men&uacute;</a>	
 		</div>
 
 
@@ -45,7 +45,7 @@
 		
 			<form id="FormIngreso">
 				<center>
-					<img src="imagenes/interrogacion.jpg" >
+					<img src="imagenes/PiedraPapel.jpg" >
 					<input type="text"  placeholder="Ingrese Nombre" ng-model="datos.nombre"id="nombre">					
 				</center>
 				
@@ -54,14 +54,14 @@
 		</div>
 		<div class="CajaUno animated bounceInLeft">
 			
-			<img class="PiedraPapelTijera animated zoomInRight " src="imagenes/piedra.jpg" ng-click="piedra()">
-			<img class="PiedraPapelTijera animated zoomInUp" src="imagenes/papel.jpg" ng-click="papel()">
-			<img class="PiedraPapelTijera animated zoomInLeft"  src="imagenes/tijera.jpg" ng-click="tijera()">
+			<img class="PiedraPapelTijera animated zoomInRight " src="imagenes/piedra.png" ng-click="piedra()">
+			<img class="PiedraPapelTijera animated zoomInUp" src="imagenes/papel.png" ng-click="papel()">
+			<img class="PiedraPapelTijera animated zoomInLeft"  src="imagenes/tijera.png" ng-click="tijera()">
 
 		</div>
 
 		<div style=" margin-top: 20%;" class="CajaEnunciado animated bounceInLeft">
-			<h2>Como jugas:</h2>
+			<h2>Piedra, Papel, Tijera, como jugas:</h2>
 			
 				<h3>
 						Despues de ingresar tu nombre,
