--- a/public/menu.html
+++ b/public/menu.html
@@ -5,8 +5,24 @@
 		<title>Programación AngularJS</title>
 
 		<!--Estilos-->
+		<style>
+		.bg-1 { 
+		    background-color: #1abc9c; /* Green */
+		    color: #ffffff;
+		}
+		.bg-2 { 
+		    background-color: #474e5d; /* Dark Blue */
+		    color: #ffffff;
+		}
+		.bg-3 { 
+		    background-color: #ffffff; /* White */
+		    color: #555555;
+		}
+		</style>
+
+		<link rel="stylesheet" type="text/css" href="animacion.css">	
 		<link rel="stylesheet" type="text/css" href="estilo.css">
-		<link rel="stylesheet" type="text/css" href="animacion.css">
+        <link rel="stylesheet" type="text/css" href="bootstrap.min.css">	
 		<!--final de Estilos-->
 
 		<!--Lógica-Programación-->
@@ -15,27 +31,36 @@
 		
 
 		<div class="CajaAbajo animated bounceInUp">
-			<a style=" margin-top: 0%;"  class="MiBotonUTNLinea" onclick="location.href='index.html'" >Perfil...</a>	
+			<a style=" margin-top: 0%;"  class="MiBotonUTNMenuInicioParcial" onclick="location.href='index.html'" >Perfil...</a>	
 		</div>
 
 
 	</head>
 	<body>
 		
-		<div class="CajaInicio animated flash"  >
-		<img  src="juegos.png" style=" width: 246px; float: right;">	
-			<h1>Trabajo Pr&aacute;ctico: </br> Plataforma digital II</h1>
-			<form id="FormIngreso" style="min-height: 280px;">
-				
-				<a  class="MiBotonUTNMenu" title="Adivina el n&uacute;mero v1.0" onclick="location.href='juego.html'" >Adivina el numero</a>
-				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v1.0"  onclick="location.href='PiedraPapel.html'" >Piedra Papel Tijera</a>
-				<a  class="MiBotonUTNMenu" title="Piedra, papel o tijera v2.0" onclick="location.href='Agilidad.html'" >Agilidad</a>
-			</form>
+		<div class="CajaInicio animated flash"  >  </div>
+
+		<div class="container-fluid bg-1 text-center">
+		  <h3>Trabajo Pr&aacute;ctico</h3>
+		  <img src="juegos.png" class="img-circle" alt="Bird">
 		</div>
 
-		<center>
-			
-		</center>
+
+		<div class="container-fluid bg-2 text-center">
+		  <h3>Juegos</h3>
+		</div>
+
+		<div class="container-fluid bg-1 text-center">
+			<a  class="MiBotonUTN" title="Adivina el n&uacute;mero v1.0" onclick="location.href='juego.html'" >Adivina el numero </a>
+		</div>
+
+		<div class="container-fluid bg-2 text-center">
+			<a  class="MiBotonUTN" title="Piedra, papel o tijera v1.0"  onclick="location.href='PiedraPapel.html'" >Piedra Papel Tijera</a>
+			<a  class="MiBotonUTN" title="Piedra, papel o tijera v2.0" onclick="location.href='Agilidad.html'" >Agilidad</a>
+	
+		</div>
+
+
 		
 	</body>
 </html>
